--- a/style.css
+++ b/style.css
@@ -4,4 +4,18 @@
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
+  box-sizing: border-box;
+}
+
+div.board-1 {
+  display: grid;
+  grid-template-columns: 33px 33px 33px 33px 33px 33px 33px 33px 33px 33px;
+  justify-items: center;
+}
+
+.board-1 div {
+  height: 33px;
+  width: 100%;
+  /* padding: 6px 0; */
+  border: 1px solid black;
 }
