--- a/style.css
+++ b/style.css
@@ -52,3 +52,21 @@ div.open:hover {
 div.ship {
   background-color: rgba(11, 11, 36, 0.626);
 }
+
+dialog {
+  box-shadow: 5px 5px 10px -10px;
+  border: none;
+  border-radius: 9px;
+  position: absolute;
+  top: 18%;
+  left: 40%;
+  padding: 30px 60px 20px;
+  width: 350px;
+  height: 400px;
+  background-color: rgba(255, 255, 255, 0.943);
+}
+
+dialog div {
+  display: flex;
+  justify-content: center;
+}
