Update number of enemy ships and friendly ship size placement.

--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ dialog {
   box-shadow: 5px 5px 10px -10px;
   border: none;
   border-radius: 9px;
-  /* position: absolute;
-  top: 18%;
-  left: 40%; */
+  position: absolute;
+  top: 5%;
+  left: 6%;
   padding: 30px 20px 20px;
   width: 364px;
   height: 590px;
